[project]
name = "coderabbit-demo"
version = "0.1.0"

requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest==7.2.*",
    "pytest-xdist",
]

[tool.pytest]
[tool.pytest.ini_options]
log_cli = 1
log_cli_level="WARNING"
log_auto_indent=true
addopts = "-v --strict-markers --ignore=deps,__pypackages__"
testpaths = ["tests"]
markers = ["tennis"]